[gd_scene load_steps=12 format=2]

[ext_resource path="res://DungeonCrawler/UI/PageTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_10.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_8.tres" type="DynamicFont" id=3]
[ext_resource path="res://DungeonCrawler/UI/Leaderboard/Leaderboard.gd" type="Script" id=4]
[ext_resource path="res://DungeonCrawler/CodeBlocks/WalkPanelstyleboxflat.tres" type="StyleBox" id=5]
[ext_resource path="res://DungeonCrawler/UI/Leaderboard/LevelSelector.gd" type="Script" id=6]
[ext_resource path="res://DungeonCrawler/DataOutput/DataOutputButton.gd" type="Script" id=7]
[ext_resource path="res://Assets/ui/save_button.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fonts/monogram/ttf/monogram.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=2]
OptionButton/colors/font_color = Color( 1, 1, 1, 1 )
OptionButton/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
OptionButton/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = null
OptionButton/styles/focus = null
OptionButton/styles/hover = null
OptionButton/styles/normal = null
OptionButton/styles/pressed = null
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_separator = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 0
PopupMenu/constants/vseparation = 0
PopupMenu/fonts/font = SubResource( 1 )
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = ExtResource( 5 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[node name="Leaderboard" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Label" parent="." index="3"]
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "leaderboard"

[node name="Leaderboard" type="ScrollContainer" parent="." index="4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -22.0
margin_right = 92.0
margin_bottom = 58.0
rect_min_size = Vector2( 170, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard" index="0"]
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelContainer" type="HBoxContainer" parent="." index="5"]
margin_left = 100.119
margin_top = 30.0
margin_right = 183.119
margin_bottom = 50.0
rect_min_size = Vector2( 80, 20 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="LevelContainer" index="0"]
margin_top = 3.0
margin_right = 37.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEVEL "

[node name="LevelSelector" type="OptionButton" parent="LevelContainer" index="1"]
margin_left = 42.0
margin_right = 83.0
margin_bottom = 20.0
focus_mode = 0
theme = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.905882, 0.894118, 0.254902, 1 )
text = "All"
flat = true
align = 1
expand_icon = true
script = ExtResource( 6 )

[node name="DataOutputButton" type="TextureButton" parent="." index="8"]
visible = false
margin_left = 236.5
margin_top = 6.25
margin_right = 249.5
margin_bottom = 19.25
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="LevelContainer/LevelSelector" to="." method="_on_LevelSelector_item_selected"]
